--- a/templates/about.html
+++ b/templates/about.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
 </head>
 <body>
-   <h1>Hello world</h1> 
-   <ul>
-    {% for items in data %}
-       <li>{{items.title}}</li>
-       <li>{{items.title}}</li>
-    {% endfor %}
-   </ul>
-
+   <h1>Hellow world</h1>
 </body>
 </html>
