--- a/templates/add_items.html
+++ b/templates/add_items.html
@@ -13,7 +13,7 @@
         <input type="text" id="title" name="title"></br>
         </br>
         <level for="description">description</level></br>
-        <input type="tex" id="description" name="description"></br>
+        <input type="text" id="description" name="description"></br>
         </br>
         <button type="submit">submit</button>
     </form>
