--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -7,20 +7,19 @@
 </head>
 <body>
     <h1>Add Student</h1>
-    <form action="{% url 'add_student' %}" method="post">
+    {% if messages %}
+    {% for message in messages %}
+
+     <p>{{message}}</p>
+
+     {% endfor %}
+     {% endif %}
+
+     <form action="{% url 'add-student' %}" enctype="multipart/form-data" method="post">
         {% csrf_token %}
-        <label for="Name">Name</label>
-        <input type="text" id="Name" name="Name">
-        <br>
-        <br>
-        <label for="Age">Age</label>
-        <input type="number" id="Age" name="Age">
-        <br>
-        <br>
-        <label for="Course">Course</label>
-        <input type="text" id="Course" name="Course">
-        <br>
-        <br>
+
+         {{ form.as_p }}
+
         <button type="submit">submit</button>
     </form>
 </body>
