--- a/templates/student_update.html
+++ b/templates/student_update.html
@@ -7,22 +7,21 @@
 </head>
 <body>
     <h1>Update a Student's Details</h1>
+    {% if messages %}
+    {% for message in messages %}
+
+     
+    <p>{{message}}</p>
+
+
+    {% endfor %}
+    {% endif %}
+
     <form action="{% url 'update-student' id %}" method="post">
         {% csrf_token %}
-        
-        
-        <label for="Name">Name</label>
-        <input type="text" value="{{Name}}" id="Name" name="Name">
-        <br>
-        <br>
-        <label for="Age">Age</label>
-        <input type="number" value="{{Age}}" id="Age" name="Age">
-        <br>
-        <br>
-        <label for="Course">Course</label>
-        <input type="text" value="{{Course}}" id="Course" name="Course">
-        <br>
-        <br>
+
+        {{form.as_p}}
+
         <button type="submit">submit</button>
     </form>
     
