--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,14 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% comment %} <link rel="stylesheet" href="{% static '/style.css' %}">
+        {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> {% endcomment %}
     </head>
     <body>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'sign-out' %}">log-out</a>
+
+        {% endif%}
         {% block content %}
         
        
