--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> {% endcomment %}
+         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
     </head>
     <body>
         {% if request.user.is_authenticated %}
